refactor: 投票機能
